master Update responsive layout

--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
                     <nav class="menu-holder">
                         <ul class="menu-list">
                             <li>
-                                <a href="#home" class="active-link" >Home</a>
+                                <a class="link-item" href="#home" class="active-link" >Home</a>
                             </li>
                             <li>
-                                <a href="#services">Services</a>
+                                <a class="link-item" href="#services">Services</a>
                             </li>
                             <li>
-                                <a href="#work">Work</a>
+                                <a class="link-item" href="#work">Work</a>
                             </li>
                             <li>
-                                <a href="#about">About</a>
+                                <a class="link-item" href="#about">About</a>
                             </li>
                             <li>
-                                <a href="#clients">Clients</a>
+                                <a class="link-item" href="#clients">Clients</a>
                             </li>
                             <li>
-                                <a href="#contact">Contact</a>
+                                <a class="link-item" href="#contact">Contact</a>
                             </li>
                         </ul>
                     </nav>
@@ -159,7 +159,7 @@
                     Vivamus suscipit tortor eget felis porttitor volutpat.
                 </p>
                 <div class="work-flow-list">
-                    <div class="work-flow-list-item col-lg-2 col-md-4 col-sm-6 col-xs-12">
+                    <div class="work-flow-list-item col-lg-2 col-md-12 col-sm-12 col-xs-12">
                         <div class="work-flow-icon-holder">
                             <i class="fa fa-bar-chart" aria-hidden="true"></i>
                         </div>
@@ -173,7 +173,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="work-flow-list-item col-lg-2 col-md-4 col-sm-6 col-xs-12">
+                    <div class="work-flow-list-item col-lg-2 col-md-12 col-sm-12 col-xs-12">
                         <div class="work-flow-icon-holder">
                             <i class="fa fa-tasks" aria-hidden="true"></i>
                         </div>
@@ -187,7 +187,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="work-flow-list-item col-lg-2 col-md-4 col-sm-6 col-xs-12">
+                    <div class="work-flow-list-item col-lg-2 col-md-12 col-sm-12 col-xs-12">
                         <div class="work-flow-icon-holder">
                             <i class="fa fa-wrench" aria-hidden="true"></i>
                         </div>
@@ -201,7 +201,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="work-flow-list-item col-lg-2 col-md-4 col-sm-6 col-xs-12">
+                    <div class="work-flow-list-item col-lg-2 col-md-12 col-sm-12 col-xs-12">
                         <div class="work-flow-icon-holder">
                             <i class="fa fa-cog" aria-hidden="true"></i>
                         </div>
@@ -215,7 +215,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="work-flow-list-item col-lg-2 col-md-4 col-sm-6 col-xs-12">
+                    <div class="work-flow-list-item col-lg-2 col-md-12 col-sm-12 col-xs-12">
                         <div class="work-flow-icon-holder">
                             <i class="fa fa-spinner" aria-hidden="true"></i>
                         </div>
@@ -229,7 +229,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="work-flow-list-item col-lg-2 col-md-4 col-sm-6 col-xs-12">
+                    <div class="work-flow-list-item col-lg-2 col-md-12 col-sm-12 col-xs-12">
                         <div class="work-flow-icon-holder">
                             <i class="fa fa-truck" aria-hidden="true"></i>
                         </div>
@@ -635,7 +635,7 @@
                         felis porttitor volutpat. Curabitur aliquet quam id dui posuere
                     </p>
                     <div class="feedback-btn-holder">
-                        <a href="#contact-form" class="feedback-btn general-btn">
+                        <a href="#contact-form" class="link-item feedback-btn general-btn">
                             View Live
                         </a>
                     </div>
@@ -651,7 +651,7 @@
                         felis porttitor volutpat. Curabitur aliquet quam id dui posuere
                     </p>
                     <div class="achievement-list">
-                        <div class="achievement-item col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                        <div class="achievement-item col-lg-3 col-md-12 col-sm-12 col-xs-12">
                             <div class="achievement-holder">
                                 <span class="achievements-item-number">
                                 1600
@@ -661,7 +661,7 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="achievement-item col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                        <div class="achievement-item col-lg-3 col-md-12 col-sm-12 col-xs-12">
                             <div class="achievement-holder">
                                 <span class="achievements-item-number">
                                     3200
@@ -671,7 +671,7 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="achievement-item col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                        <div class="achievement-item col-lg-3 col-md-12 col-sm-12 col-xs-12">
                             <div class="achievement-holder">
                                 <span class="achievements-item-number">
                                     40
@@ -681,7 +681,7 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="achievement-item col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                        <div class="achievement-item col-lg-3 col-md-12 col-sm-12 col-xs-12">
                             <div class="achievement-holder">
                                 <span class="achievements-item-number">
                                     20000
@@ -717,7 +717,7 @@
                     </p>
                 </div>
                 <div class="about-list">
-                    <div class="about-item col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="about-item col-lg-6 col-md-12 col-sm-12 col-xs-12">
                         <div class="about-item-container">
                             <div class="about-icon-holder">
                                 <i class="fa fa-clock-o" aria-hidden="true"></i>
@@ -732,7 +732,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="about-item col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="about-item col-lg-6 col-md-12 col-sm-12 col-xs-12">
                         <div class="about-item-container">
                             <div class="about-icon-holder">
                                 <i class="fa fa-life-ring" aria-hidden="true"></i>
@@ -748,7 +748,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="about-item col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="about-item col-lg-6 col-md-12 col-sm-12 col-xs-12">
                         <div class="about-item-container">
                             <div class="about-icon-holder">
                                 <i class="fa fa-thumbs-up" aria-hidden="true"></i>
@@ -763,7 +763,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="about-item col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="about-item col-lg-6 col-md-12 col-sm-12 col-xs-12">
                         <div class="about-item-container">
                             <div class="about-icon-holder">
                                 <i class="fa fa-comments" aria-hidden="true"></i>
@@ -795,7 +795,7 @@
                     </p>
                 </div>
                 <div class="team-member-list">
-                    <div data-name="mike_doe" class="team-member col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                    <div data-name="mike_doe" class="team-member col-lg-3 col-md-12 col-sm-12 col-xs-12">
                         <div class="team-member-container">
                             <div class="team-member-img-holder">
                                 <img src="./src/images/team1.jpg" alt="creative director">
@@ -809,7 +809,7 @@
                             <span class="angle-up"></span>
                         </div>
                     </div>
-                    <div data-name="nick_doe" class="team-member col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                    <div data-name="nick_doe" class="team-member col-lg-3 col-md-12 col-sm-12 col-xs-12">
                         <div class="team-member-container">
                             <div class="team-member-img-holder">
                                 <img src="./src/images/team2.jpg" alt="creative director">
@@ -823,7 +823,7 @@
                             <span class="angle-up"></span>
                         </div>
                     </div>
-                    <div data-name="anthony_doe" class="team-member col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                    <div data-name="anthony_doe" class="team-member col-lg-3 col-md-12 col-sm-12 col-xs-12">
                         <div class="team-member-container">
                             <div class="team-member-img-holder">
                                 <img src="./src/images/team3.jpg" alt="creative director">
@@ -837,7 +837,7 @@
                             <span class="angle-up"></span>
                         </div>
                     </div>
-                    <div data-name="john_doe" class="team-member col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                    <div data-name="john_doe" class="team-member col-lg-3 col-md-12 col-sm-12 col-xs-12">
                         <div class="team-member-container">
                             <div class="team-member-img-holder">
                                 <img src="./src/images/team4.jpg" alt="creative director">
@@ -1113,7 +1113,7 @@
                         </p>
                     </div>
                     <div class="contact-list">
-                        <div class="contact-item-holder col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <div class="contact-item-holder col-lg-4 col-md-12 col-sm-12 col-xs-12">
                             <div class="contact-item">
                                 <div class="contact-icon-holder">
                                     <i class="fa fa-home" aria-hidden="true"></i>
@@ -1126,7 +1126,7 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="contact-item-holder col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <div class="contact-item-holder col-lg-4 col-md-12 col-sm-12 col-xs-12">
                             <div class="contact-item">
                                 <div class="contact-icon-holder">
                                     <i class="fa fa-comment" aria-hidden="true"></i>
@@ -1139,7 +1139,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="contact-item-holder col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <div class="contact-item-holder col-lg-4 col-md-12 col-sm-12 col-xs-12">
                             <div class="contact-item">
                                 <div class="contact-icon-holder">
                                     <i class="fa fa-phone" aria-hidden="true"></i>
@@ -1174,6 +1174,7 @@
                                 class="form-field"
                                 type="text"
                                 placeholder="Your name"
+                                required
                             />
                             <label for="name" class="required-field-control field-control-general">Your name</label>
                         </div>
@@ -1184,6 +1185,7 @@
                                 class="form-field"
                                 type="email"
                                 placeholder="Your email"
+                                required
                             />
                             <label for="email" class="required-field-control field-control-general">Your email</label>
                         </div>
@@ -1204,7 +1206,7 @@
                         </div>
                     </div>
                     <div class="btn-holder">
-                        <button class="send-msg-btn">
+                        <button class="send-msg-btn" type="submit">
                             <span>Send Message</span>
                         </button>
                     </div>
